--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -58,6 +58,15 @@
     font-weight: normal;
 }
 
+html,
+body {
+    margin: 0;
+    padding: 0;
+    min-height: 100%;
+    scroll-behavior: smooth;
+    overflow-x: hidden;
+}
+
 body {
     min-height: 100vh;
     color: var(--color-text);
