--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,14 +1,15 @@
-@import './base.css';
+@import "@/assets/styles/base.css";
+@import "@/assets/styles/typography.css";
 
-@import 'swiper/css';
-@import 'swiper/css/navigation';
-@import 'swiper/css/pagination';
-@import 'swiper/css/scrollbar';
+@import "swiper/css";
+@import "swiper/css/navigation";
+@import "swiper/css/pagination";
+@import "swiper/css/scrollbar";
 
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 body {
-  @apply font-sans;
+    @apply font-sans;
 }
